  - all properties and settings use the same approach: data from the table, eventually overriden in the app ini settings, eventually overriden in the table ini settings,
  - POV files are no more needed and therefore deprecated (they are still read and used unless a ini file has been created for backward compatibility).

- remove Anti-Aliasing and Postprocessed Anti-Aliasing options from the table properties (and use an .ini based override instead)

- the application is now fully 'DPI aware'. This means that one can use multiple monitors at different DPI settings.
  This may require to adjust the position of windows on existing installs.

- add 2 new camera layout modes which work better for cabinets, and for anaglyph stereo (as well as other use cases) and allows:
  - to setup the player position in real word units, measuring from the bottom center of the playfield in centimeters. This should allow to have a single position corresponding to your size and play position for all your tables.
  - to setup the camera like a 'real' camera: there is no more layback but a view offset, the other properties being simply the inclination and the field of view.
  - for camera mode, adjust the user interface to show these informations and allow to easily reset to a default position by pressing the plunger key.
  - support a new 'window' mode, designed for pincab users, where the screen is not orthogonal to the viewer, requiring an adjusted projection.
- change camera mode buttons to match the ones when starting VPX with -povedit (Start = Export POV, Credit = Reset/Quit, Plunger = Defaults)

- change view mode selection settings, you can choose between:
  - Desktop & FSS: automatically selects one of the 2 depending if the table has enabled FSS (because it includes a backglass)
  - Cabinet: use the cabinet view setup (also named 'Fullscreen')
  - Desktop: use the desktop view setup (never use the FSS settings, even for tables including a backglass)